force-app/main/default/objects/User/fields/Adviser_Brokerage_Service_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adviser_Brokerage_Service_Fee_Rate__c</fullName>
    <label>Adviser Brokerage Service Fee Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>