force-app/main/default/objects/User/fields/Adviser_Up_Front_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adviser_Up_Front_Commission_Rate__c</fullName>
    <label>Adviser Up Front Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>