force-app/main/default/objects/User/fields/Best_Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Best_Customer_Review__c</fullName>
    <label>Best Customer Review</label>
    <length>100</length>
    <type>Text</type>
</CustomField>