force-app/main/default/objects/User/fields/Broker_Quote__c.field-meta.xml
<CustomField>
    <fullName>Broker_Quote__c</fullName>
    <label>Broker Quote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>