force-app/main/default/objects/User/fields/Broker_Quote_By__c.field-meta.xml
<CustomField>
    <fullName>Broker_Quote_By__c</fullName>
    <label>Broker Quote By</label>
    <type>TextArea</type>
</CustomField>