force-app/main/default/objects/User/fields/mercury__Cloak_SMS_Messages__c.field-meta.xml
<CustomField>
    <fullName>mercury__Cloak_SMS_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, all SMS messages sent from this User are delivered from the specified mobile phone number. (feature activation may be required)</inlineHelpText>
    <label>Cloak SMS Messages</label>
    <type>Checkbox</type>
</CustomField>