force-app/main/default/objects/User/fields/mercury__Disable_User_Switch_in_SMS_Inbox__c.field-meta.xml
<CustomField>
    <fullName>mercury__Disable_User_Switch_in_SMS_Inbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field “Disable User Switch in SMS Inbox” field is set to TRUE, that User won&apos;t see the Picklist at the top of the SMS Inbox, they&apos;ll only be able to view their own messages.</description>
    <inlineHelpText>If this field “Disable User Switch in SMS Inbox” field is set to TRUE, that User won&apos;t see the Picklist at the top of the SMS Inbox, they&apos;ll only be able to view their own messages.</inlineHelpText>
    <label>Disable User Switch in SMS Inbox</label>
    <type>Checkbox</type>
</CustomField>