force-app/main/default/objects/User/fields/mercury__Mercury_SMS_Default_Account__c.field-meta.xml
<CustomField>
    <fullName>mercury__Mercury_SMS_Default_Account__c</fullName>
    <description>Enables individual Users to specify which MessageMedia account they send from.</description>
    <label>Mercury SMS Default Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>