force-app/main/default/objects/User/fields/mercury__Owner_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>mercury__Owner_Mobile_Phone__c</fullName>
    <description>Formula reference to owner mobile phone.</description>
    <formula>IF( NOT(ISBLANK( ManagerId)), Manager.MobilePhone, MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile Phone</label>
    <type>Text</type>
</CustomField>