force-app/main/default/objects/User/fields/mercury__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>mercury__OwnerId__c</fullName>
    <description>Formula reference to the allocated owner of this record.</description>
    <formula>IF( NOT(ISBLANK(ManagerId)), ManagerId, Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>